# mpqc

./: .clang-format  .codecov.yml  .gitignore  .hgtags  .travis.yml  CHANGES  CITATION  CMakeLists.txt  CNAME  INSTALL  INSTALL.md  LICENSE  MPQC.files  MPQC.includes  Makefile  README  README.md  TODO  _config.yml  configure  configure.in  eri3_low_rank_example.cpp  hartree_fock.cpp  index.html  index.md  integral_correctness_test.cpp  integral_decomp_example.cpp  integral_space_savings.cpp  lr_hartree_fock.cpp  main.cpp  mpqc.pc.in  mpqc.py  params.json  pno-mpqc.files  pno-mpqc.includes  sparse_integral_example.cpp  sqrt_inverse_example.cpp  test_accuracy.cpp
Matrix/: CMakeLists.txt  LRTile_test.cpp  Matrix_test.cpp  dmhm.h  full_rank_tile.h  lin_algebra.h  low_rank_tile.h  lr_reduced_full_test.cpp  lr_tile.h  lrtile_full_only_test.cpp  lrtile_reduced_only_test.cpp  sparse_tile.h  tensor.h  tile_algebra.h  tile_concept.h  tile_mutations.h  tile_ops.h  tile_pimpl.h  tile_pimple.h  tile_variant.h
basis/: CMakeLists.txt  atom_basisset.cpp  atom_basisset.h  basis.cpp  basis.h  basis_fwd.h  basis_set.cpp  basis_set.h  basis_set_maps.h  basisset.cpp  basisset.h  cluster_shells.cpp  cluster_shells.h  clusterable_shell.h  libint2_basis_test.cpp  libintshell_test.cpp  shell_cluster.cpp  shell_cluster.h  shell_vec_functions.cpp  shell_vec_functions.h
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  Makefile  compile.dox  compilers.dox  develop.dox  download.dox  doxygen.cfg.in  doxygen.man1.cfg.in  doxygen.man3.cfg.in  factory.dox  input.dox  mainpage.dox  modules.dox  namespaces.h  namespacetree.dox  overview.dox  run.dox  sf_footer.html  srctree.dox  top.dox
examples/: CMakeLists.txt  atom_based_cluster_example.cpp  basis_example.cpp  blocking.cpp  cadf_df_scf.cpp  ccsd.cpp  cluster_example.cpp  clustering_example.cpp  default_input.json  eigen_value_estimator_bug_min_example.cpp  empty_main.cpp  eom_cc.cpp  eri3X.cpp  eri3X12.cpp  eri3X_with_density.cpp  eri3_with_density_from_disk.cpp  four_center_exchange.cpp  generate_input.py  group_meeting_example.cpp  hartree_fock.cpp  hf_for_paper.cpp  hf_l_inv.cpp  hf_l_inv_head_gordon_trick.cpp  hf_l_low_mem.cpp  hf_low_mem_plus_trick.cpp  lr_hartree_fock.cpp  lr_hartree_fock_inv_oh.cpp  matrix_plot.cpp  memory_usage.cpp  molecule_example.cpp  mp2.cpp  mp2_f12_expression.cpp  mpqc.cpp  mpqc_example.json  mpqc_info.cpp  mpqc_info.json  mpqc_new.cpp  mpqc_new.json  mpqc_test.cpp  new_integrals.cpp  (+11 more)
expression/: CMakeLists.txt  formula.cpp  formula.h  formula_map.h  formula_registry.h  greek_to_english_name.h  operation.cpp  operation.h  orbital_index.cpp  orbital_index.h  orbital_registry.h  orbital_space.h  orbital_space_registry.h
include/: CMakeLists.txt  btas.h  eigen.h  libint.h  tbb.h  tcc_all_same.h  tiledarray.h
integrals/: CMakeLists.txt  QRR_screening.h  atomic_integral.h  atomic_integral_base.cpp  atomic_integral_base.h  btas_compute_functors.h  btas_tensor_pass_through.h  btas_to_decomp_tensor.h  btas_to_low_rank_tensor.h  btas_to_ta_tensor.h  compute_functors.h  dense_task_integrals.h  direct_task_integrals.h  direct_tile.h  integral.cpp  integral_builder.h  integral_engine_pool.h  integral_example.cpp  integral_screeners.h  integral_screening_matrices.cpp  integral_screening_matrices.h  integral_test.cpp  integrals.h  lazy_integrals.h  low_tile_functors.h  make_engine.h  molecular_integral.h  orbital_index.cpp  orbital_index.h  schwarz_screen.h  screened_task_integrals.h  sparse_task_integrals.h  ta_compute_functors.h  ta_sparse_space_calculator.h  ta_tensor_to_low_rank_tensor.h  task_integral_kernels.cpp  task_integral_kernels.h  task_integrals.h  task_integrals_common.h  task_integrals_helper.cpp  (+4 more)
molecule/: CMakeLists.txt  atom.cpp  atom.h  atom_based_cluster.cpp  atom_based_cluster.h  atom_based_cluster_concept.h  atom_masses.h  attach_hydrogens.cpp  attach_hydrogens.h  cluster.cpp  cluster.h  cluster_collapse.h  cluster_concept.h  clustering_functions.cpp  clustering_functions.h  common.cpp  common.h  make_clusters.cpp  make_clusters.h  molecule.cpp  molecule.h  molecule_fwd.h  molecule_test.cpp
mpqc/: .cvsignore  .project  CHANGES  CITATION  LICENSE  Makefile  README  configure.in  mp2r12_energy_util_orig.h
scf/: CMakeLists.txt  builder.h  cadf_builder.h  cadf_builder_forced_shape.h  cadf_fitting_coeffs.h  cadf_helper_functions.h  clusterd_coeffs.h  density_builder.h  diagonalize_for_coffs.hpp  eigen_solve_density_builder.cpp  eigen_solve_density_builder.h  four_center_direct_rhf.h  linear_cadf_builder.h  mo_build.h  orbital_localization.cpp  orbital_localization.h  purification_density_build.cpp  purification_density_build.h  scf.cpp  scf.h  scf_base.h  soad.h  ta_shape_tracker.h  traditional_df_fock_builder.cpp  traditional_df_fock_builder.h  traditional_four_center_fock_builder.h
tensor/: CMakeLists.txt  btas_shallow_copy_wrapper.h  coulomb_tensor.h  decomp_algebra.h  decomp_helper.h  decomp_tensor.h  decomposed_tensor.cpp  decomposed_tensor.h  decomposed_tensor_addition.h  decomposed_tensor_algebra.cpp  decomposed_tensor_algebra.h  decomposed_tensor_gemm.h  decomposed_tensor_gemm_helper.h  decomposed_tensor_multiplication.h  decomposed_tensor_nonintrusive_interface.h  decomposed_tensor_subtraction.h  decomposed_tensor_unary.h  density_tensor.h  flatten_test.cpp  full_rank_tile.h  low_rank_tile.h  mpqc_tile.h  tcc_tile.h  tensor_fwd.h  tensor_train.h  tensor_transforms.h  tile_algebra.h  tile_mutations.h  tile_ops.h  tile_pimpl.h  tile_pimpl_devel.h  tile_variant.h  tile_variant_devel.h  vector_localization.h
tests/: 3-21G_basis_G94.txt  CMakeLists.txt  all_same_test.cpp  ano_basis_G94.txt  atom.cpp  atom_test.cpp  atomic_integral_test.cpp  basis_set_test.cpp  basis_test.cpp  btas_test.cpp  cluster_test.cpp  clustering_test.cpp  create_low_rank_array.h  f12_utility_test.cpp  formula_test.cpp  full_rank_tile_test.cpp  gtest.h  h2o.xyz  keyval_test.cpp  keyval_test.json  low_rank_tile_test.cpp  orbital_index_test.cpp  test_main.cpp  tile_algebra_test.cpp  tile_mutations_test.cpp  tile_ops_test.cpp  (+5 more)
(+6622 files in other folders)
